# string-intern

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.rst  vagga.yaml
src/: base_type.rs  lib.rs  validator.rs
